--- a/package.json
+++ b/package.json
@@ -6,13 +6,23 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/server.js",
+    "dev": "nodemon --watch src --exec node -r dotenv/config src/server.js",
+    "test": "jest --runInBand",
+    "lint": "eslint . --fix",
+    "seed": "node src/scripts/seed.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "mongoose": "^8.18.2"
+    "compression": "^1.8.1",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
+    "helmet": "^8.1.0",
+    "mongoose": "^8.18.2",
+    "morgan": "^1.10.1"
   }
 }
