--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ PORT=5000
 ATLAS_USERNAME=HomeLaptop
 ATLAS_PASSWORD=7xHKoF2EpBi26g6V
 ATLAS_URI=mongodb+srv://HomeLaptop:7xHKoF2EpBi26g6V@cluster0.tyhaak1.mongodb.net/Book_Store?retryWrites=true&w=majority&appName=Cluster0
+# ATLAS_URI=?mongodb+srv://abdelrhmanmohamedzenhom_db_user:iUhHbHySa5ynDBs6@cluster0.eagblis.mongodb.net/natours?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=mySecret
 JWT_EXPIRES_IN=1d
 NODE_ENV=development
