--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "mongoose": "^8.18.2",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "uuid": "^8.3.2"
   }
 }
