--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@vercel/node": "^5.3.24",
     "ajv": "^8.17.1",
     "bcryptjs": "^3.0.2",
     "compression": "^1.8.1",
